translate git started section

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -24,7 +24,10 @@
     "specificationisrequired":"يجب ادخال التخصص",
     "role" : "الدور",
     "roleisrequired":"يجب ادخال الدور",
-    "welcome" :"اهلا"
+    "welcome" :"اهلا",
+   "Welcome to Medilab":"",
+   "We looking forward to serve you and your family's healthcare needs":"",
+   "Get Started":""
 
 
 }
