adding why us section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,15 @@
     "welcome" :"welcome",
 "Welcome to Medilab":"Welcome to Medilab",
 "We looking forward to serve you and your family's healthcare needs":"We looking forward to serve you and your family's healthcare needs",
-"Get Started":"Get Started"
+"Get Started":"Get Started",
+"Perfect Quality":"Perfect Quality",
+"We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.",
+"We use the latest technology":"We use the latest technology",
+"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.",
+"Simplify Your Healthcare Experience":"Simplify Your Healthcare Experience",
+"Why Choose Medilab?":"Why Choose Medilab?",
+"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.":"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.",
+"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.":"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.",
+"Learn More":"Learn More"
 
 }
