--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -27,7 +27,16 @@
     "welcome" :"اهلا",
    "Welcome to Medilab":"",
    "We looking forward to serve you and your family's healthcare needs":"",
-   "Get Started":""
+   "Get Started":"",
+   "We use the latest technology":"",
+   "Perfect Quality":"",
+   "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"",
+   "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"",
+   "Why Choose Medilab?":"",
+   "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.":"",
+   "Simplify Your Healthcare Experience":"",
+   "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.":"",
+   "Learn More":""
 
 
 }
