adding make appointment component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,11 +29,21 @@
 "We looking forward to serve you and your family's healthcare needs":"We looking forward to serve you and your family's healthcare needs",
 "Get Started":"Get Started",
 "Perfect Quality":"Perfect Quality",
+"Your Name":"Your Name",
+"Your Email":"Your Email",
+"Your Phone":"Your Phone",
+"Appointment Date":"Appointment Date",
+"Select Doctor":"Select Doctor",
+"Message (Optional)":"Message (Optional)",
+"Make an Appointment":"Make an Appointment",
+"Select Department":"Select Department",
 "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.",
 "We use the latest technology":"We use the latest technology",
 "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.",
 "Simplify Your Healthcare Experience":"Simplify Your Healthcare Experience",
 "Why Choose Medilab?":"Why Choose Medilab?",
+"Make an Appointment":"Make an Appointment",
+"We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.":"We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.",
 "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.":"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.",
 "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.":"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.",
 "Learn More":"Learn More"
