--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -23,12 +23,22 @@
     "specification" : "التخصص",
     "specificationisrequired":"يجب ادخال التخصص",
     "role" : "الدور",
+    "Make an Appointment":"",
+    "Your Email":"",
     "roleisrequired":"يجب ادخال الدور",
     "welcome" :"اهلا",
+    "Make an Appointment":"",
+    "Your Name":"",
+    "Your Phone":"",
+    "Select Department":"",
+    "Appointment Date":"",
+    "Select Doctor":"",
+    "Message (Optional)":"",
    "Welcome to Medilab":"",
    "We looking forward to serve you and your family's healthcare needs":"",
    "Get Started":"",
    "We use the latest technology":"",
+   "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.":"",
    "Perfect Quality":"",
    "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"",
    "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"",
