--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,33 +1,47 @@
 {
-    "Home":"الرئيسية",
-    "Sign In":"تسجيل الدخول",
-    "Sign Up":"انشاء حساب",
-    "Email":"البريد الالكتروني",
-    "Emailisrequired":"يجب ادخال البريد الالكتروني",
-    "EnterEmailForm":"ادخال هيئة البريد الالكتروني",
-    "Password":"كلمة السر",
-    "Passwordisrequired" :"يجب ادخال كلمة السر",
-    "Passwordmustbemorethan8chars":"كلمة السر يجب ان تكون اكثر من 8 حروف",
-    "Username":"اسم المستخدم",
-    "Usernameisrequired" : "يجب ادخال اسم المستخدم",
-    "Image":"الصورة",
-    "Imageisrequired":"يجب ارفاق صورة",
-    "Gender":"الجنس",
-    "Selectgender":"اختر جنسك",
-    "Male":"ذكر",
-    "Female":"انثي",
-    "Other":"اخري",
-    "Genderisrequired":"يجب اختيار الجنس",
+    "Home": "الرئيسية",
+    "Sign In": "تسجيل الدخول",
+    "Sign Up": "انشاء حساب",
+    "Email": "البريد الالكتروني",
+    "Emailisrequired": "يجب ادخال البريد الالكتروني",
+    "EnterEmailForm": "ادخال هيئة البريد الالكتروني",
+    "Password": "كلمة السر",
+    "Passwordisrequired": "يجب ادخال كلمة السر",
+    "Passwordmustbemorethan8chars": "كلمة السر يجب ان تكون اكثر من 8 حروف",
+    "Username": "اسم المستخدم",
+    "Usernameisrequired": "يجب ادخال اسم المستخدم",
+    "Image": "الصورة",
+    "Imageisrequired": "يجب ارفاق صورة",
+    "Gender": "الجنس",
+    "Selectgender": "اختر جنسك",
+    "Male": "ذكر",
+    "Female": "انثي",
+    "Other": "اخري",
+    "Genderisrequired": "يجب اختيار الجنس",
     "clinicAddress": "عنوان العيادة",
-    "clinicAddressisrequired":"يجب ادخال عنوان العيادة",
-    "specification" : "التخصص",
-    "specificationisrequired":"يجب ادخال التخصص",
-    "role" : "الدور",
-    "roleisrequired":"يجب ادخال الدور",
-    "welcome" :"اهلا",
-   "Welcome to Medilab":"",
-   "We looking forward to serve you and your family's healthcare needs":"",
-   "Get Started":""
+    "clinicAddressisrequired": "يجب ادخال عنوان العيادة",
+    "specification": "التخصص",
+    "specificationisrequired": "يجب ادخال التخصص",
+    "role": "الدور",
+    "roleisrequired": "يجب ادخال الدور",
+    "welcome": "اهلا",
+    "Services": "خدماتنا",
+    "subService": "لدينا نطاق واسع من خدمات الرعاية الطبية عالية الجودة.",
+    "Cardiology": "أمراض القلب",
+    "subCardiology": "يعالج أطباء القلب لدينا جميع أنواع أمراض القلب والأوعية الدموية",
+    "Dentistry": "طب الأسنان",
+    "subDentistry": "تتخصص عيادات الأسنان لدينا في جراحات الأسنان ، وعلاج جذور الأسنان ، والاستعاضة عنها ، وتقويم الأسنان",
+    "Ophthalmology": "طب العيون",
+    "subOphthalmology": "نوفر عيادات بأحدث التقنيات والتخصصات الدقيقة مثل: فحص الشبكية وطب عيون الأطفال",
+    "Neurology": "طب الأعصاب",
+    "subNeurology": "نحن على استعداد للتعامل مع جميع الحالات العصبية الحرجة.",
+    "Dermatology": "طب الأمراض الجلدية",
+    "subDermatology": "متخصصة بأمراض الجلد والشعر والأظافر وبعض مشاكل التجميل",
+    "Pediatrics": "طب الأطفال",
+    "subPediatrics": "نوفر لأبنائنا مستوى عال من الإدارة والرعاية ونعمل بجد لتحقيق هذه الأهداف",
+    "Welcome to Medilab": "",
+    "We looking forward to serve you and your family's healthcare needs": "",
+    "Get Started": ""
 
 
 }
