--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,32 +1,46 @@
 {
-    "Home":"Home",
-    "Sign In":"Sign In",
-    "Sign Up":"Sign Up",
-    "Email":"Email",
-    "Emailisrequired":"Email is required",
-    "EnterEmailForm":"Enter Email Form",
-    "Password":"Password",
-    "Passwordisrequired" :"Password is required",
-    "Passwordmustbemorethan8chars":"Password must be more than 8 chars",
-    "Username":"Username",
-    "Usernameisrequired" : "Username is required",
-    "Image":"Image",
-    "Imageisrequired":"Image is required",
-    "Gender":"Gender",
-    "Selectgender":"Select gender",
-    "Male":"Male",
-    "Female":"Female",
-    "Other":"Other",
-    "Genderisrequired":"Gender is required",
+    "Home": "Home",
+    "Sign In": "Sign In",
+    "Sign Up": "Sign Up",
+    "Email": "Email",
+    "Emailisrequired": "Email is required",
+    "EnterEmailForm": "Enter Email Form",
+    "Password": "Password",
+    "Passwordisrequired": "Password is required",
+    "Passwordmustbemorethan8chars": "Password must be more than 8 chars",
+    "Username": "Username",
+    "Usernameisrequired": "Username is required",
+    "Image": "Image",
+    "Imageisrequired": "Image is required",
+    "Gender": "Gender",
+    "Selectgender": "Select gender",
+    "Male": "Male",
+    "Female": "Female",
+    "Other": "Other",
+    "Genderisrequired": "Gender is required",
     "clinicAddress": "Clinic Address",
-    "clinicAddressisrequired":"Clinic Address is required",
-    "specification" : "Specification",
-    "specificationisrequired":"Specification is required",
-    "role" : "role",
-    "roleisrequired":"role is required",
-    "welcome" :"welcome",
-"Welcome to Medilab":"Welcome to Medilab",
-"We looking forward to serve you and your family's healthcare needs":"We looking forward to serve you and your family's healthcare needs",
-"Get Started":"Get Started"
+    "clinicAddressisrequired": "Clinic Address is required",
+    "specification": "Specification",
+    "specificationisrequired": "Specification is required",
+    "role": "role",
+    "roleisrequired": "role is required",
+    "welcome": "welcome",
+    "Services": "Our Services",
+    "subService": "we have a wide scope of high-quality medical care services",
+    "Cardiology": "Cardiology",
+    "subCardiology": "Our cardiologists treat all kinds of heart and blood vessel diseases",
+    "Dentistry": "Dentistry",
+    "subDentistry": "Our dental clinics are specialized in Dental surgeries, Endodontics, Prosthetic ,Orthodontics",
+    "Ophthalmology": "Ophthalmology",
+    "subOphthalmology": "We provide clinics with latest technologies and subspecialties like: Retinal examination & Pediatric ophthalmology",
+    "Neurology": "Neurology",
+    "subNeurology": "We are ready to deal with all critical neurological presentations",
+    "Dermatology": "Dermatology",
+    "subDermatology": "Specializing in diseases of the skin, hair, nails and some cosmetic problems",
+    "Pediatrics": "Pediatrics",
+    "subPediatrics": "We provide our children with high level management and care and we work hard to achieve these goals",
+    "Welcome to Medilab": "Welcome to Medilab",
+    "We looking forward to serve you and your family's healthcare needs": "We looking forward to serve you and your family's healthcare needs",
+    "Get Started": "Get Started"
 
 }
