--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
     "role" : "role",
     "roleisrequired":"role is required",
     "welcome" :"welcome",
-    "logout" :"Logout"
+    "logout" :"Logout",
 "Welcome to Medilab":"Welcome to Medilab",
 "We looking forward to serve you and your family's healthcare needs":"We looking forward to serve you and your family's healthcare needs",
 "Get Started":"Get Started"
