--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -25,7 +25,7 @@
     "role" : "الدور",
     "roleisrequired":"يجب ادخال الدور",
     "welcome" :"اهلا",
-    "logout" :"تسجيل الخروج"
+    "logout" :"تسجيل الخروج",
    "Welcome to Medilab":"",
    "We looking forward to serve you and your family's healthcare needs":"",
    "Get Started":""
