adding clinics Gallery component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,8 @@
 "Your Phone":"Your Phone",
 "Appointment Date":"Appointment Date",
 "Select Doctor":"Select Doctor",
+"Gallery":"Gallery",
+"With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.":"With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.",
 "Message (Optional)":"Message (Optional)",
 "Make an Appointment":"Make an Appointment",
 "Select Department":"Select Department",
