--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -24,6 +24,8 @@
     "specificationisrequired":"يجب ادخال التخصص",
     "role" : "الدور",
     "Make an Appointment":"",
+    "Gallery":"",
+    "With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.":"",
     "Your Email":"",
     "roleisrequired":"يجب ادخال الدور",
     "welcome" :"اهلا",
