--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -15,6 +15,7 @@
     "Gender": "الجنس",
     "Selectgender": "اختر جنسك",
     "Male": "ذكر",
+    "Search Now":"",
     "Female": "انثي",
     "Other": "اخري",
     "Genderisrequired": "يجب اختيار الجنس",
