--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "Gender": "Gender",
     "Selectgender": "Select gender",
     "Male": "Male",
+    "Search Now":"Search Now",
     "Female": "Female",
     "Other": "Other",
     "Genderisrequired": "Gender is required",
