adding contact us section

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -18,6 +18,7 @@
     "Search Now":"",
     "Female": "انثي",
     "Other": "اخري",
+    "Contact":"",
     "Genderisrequired": "يجب اختيار الجنس",
     "clinicAddress": "عنوان العيادة",
     "clinicAddressisrequired": "يجب ادخال عنوان العيادة",
