--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -15,7 +15,7 @@
     "Gender": "الجنس",
     "Selectgender": "اختر جنسك",
     "Male": "ذكر",
-    "Search Now":"",
+    "Search Now": "",
     "Female": "انثي",
     "Other": "اخري",
     "Genderisrequired": "يجب اختيار الجنس",
@@ -61,41 +61,38 @@
     "Welcome to Medilab": "",
     "We looking forward to serve you and your family's healthcare needs": "",
     "Get Started": "",
-    "clinicAddressisrequired":"يجب ادخال عنوان العيادة",
-    "specification" : "التخصص",
-    "specificationisrequired":"يجب ادخال التخصص",
-    "role" : "الدور",
-    "Make an Appointment":"",
-    "Gallery":"",
-    "With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.":"",
-    "Your Email":"",
-    
-    "roleisrequired":"يجب ادخال الدور",
-    "welcome" :"اهلا",
-    "Make an Appointment":"",
-    "Your Name":"",
-    "Your Phone":"",
-    "Select Department":"",
-    "Appointment Date":"",
-    "Select Doctor":"",
-    "Message (Optional)":"",
-   "Welcome to Medilab":"",
-   "We looking forward to serve you and your family's healthcare needs":"",
-   "Get Started":"",
-   "We use the latest technology":"",
-   "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.":"",
-   "Perfect Quality":"",
-   "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"",
-   "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"",
-   "Why Choose Medilab?":"",
-   "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.":"",
-   "Simplify Your Healthcare Experience":"",
-   "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.":"",
-   "Learn More":""
-
-
-    "logout" :"تسجيل الخروج",
-   "Welcome to Medilab":"",
-   "We looking forward to serve you and your family's healthcare needs":"",
-   "Get Started":""
+    "clinicAddressisrequired": "يجب ادخال عنوان العيادة",
+    "specification": "التخصص",
+    "specificationisrequired": "يجب ادخال التخصص",
+    "role": "الدور",
+    "Make an Appointment": "",
+    "Gallery": "",
+    "With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.": "",
+    "Your Email": "",
+    "roleisrequired": "يجب ادخال الدور",
+    "welcome": "اهلا",
+    "Make an Appointment": "",
+    "Your Name": "",
+    "Your Phone": "",
+    "Select Department": "",
+    "Appointment Date": "",
+    "Select Doctor": "",
+    "Message (Optional)": "",
+    "Welcome to Medilab": "",
+    "We looking forward to serve you and your family's healthcare needs": "",
+    "Get Started": "",
+    "We use the latest technology": "",
+    "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.": "",
+    "Perfect Quality": "",
+    "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.": "",
+    "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.": "",
+    "Why Choose Medilab?": "",
+    "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.": "",
+    "Simplify Your Healthcare Experience": "",
+    "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.": "",
+    "Learn More": "",
+    "logout": "تسجيل الخروج",
+    "Welcome to Medilab": "",
+    "We looking forward to serve you and your family's healthcare needs": "",
+    "Get Started": ""
 }
