--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -71,18 +71,19 @@
     "Your Email": "",
     "roleisrequired": "يجب ادخال الدور",
     "welcome": "اهلا",
-    "Make an Appointment": "",
+    "Make an Appointment": "احجز موعد",
     "Your Name": "",
     "Your Phone": "",
-    "Select Department": "",
+    "Select Department": "اختار قسم",
     "Appointment Date": "",
-    "Select Doctor": "",
+    "Select Doctor": "اختار دكتور",
+    "Select your city": "اختار مدينتك",
     "Message (Optional)": "",
     "Welcome to Medilab": "",
     "We looking forward to serve you and your family's healthcare needs": "",
     "Get Started": "",
     "We use the latest technology": "",
-    "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.": "",
+    "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.": "نحن نسعى جاهدين لجعل عملية جدولة المواعيد الخاصة بك سلسة قدر الإمكان ، حتى تتمكن من التركيز على صحتك ورفاهيتك.",
     "Perfect Quality": "",
     "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.": "",
     "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.": "",
@@ -94,5 +95,7 @@
     "logout": "تسجيل الخروج",
     "Welcome to Medilab": "",
     "We looking forward to serve you and your family's healthcare needs": "",
-    "Get Started": ""
+    "Get Started": "",
+    "Make an": "احجز",
+    "Appointment": "موعد"
 }
