--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
     "Gender": "Gender",
     "Selectgender": "Select gender",
     "Male": "Male",
-    "Search Now":"Search Now",
+    "Search Now": "Search Now",
     "Female": "Female",
     "Other": "Other",
     "Genderisrequired": "Gender is required",
@@ -62,39 +62,42 @@
     "Welcome to Medilab": "Welcome to Medilab",
     "We looking forward to serve you and your family's healthcare needs": "We looking forward to serve you and your family's healthcare needs",
     "Get Started": "Get Started",
+    "Make an": "Make an",
+    "Appointment": "Appointment",
 
 
-    "clinicAddressisrequired":"Clinic Address is required",
-    "specification" : "Specification",
-    "specificationisrequired":"Specification is required",
-    "role" : "role",
-    "roleisrequired":"role is required",
-    "welcome" :"welcome",
-    "logout" :"Logout",
-"Welcome to Medilab":"Welcome to Medilab",
-"We looking forward to serve you and your family's healthcare needs":"We looking forward to serve you and your family's healthcare needs",
-"Get Started":"Get Started",
-"Perfect Quality":"Perfect Quality",
-"Your Name":"Your Name",
-"Your Email":"Your Email",
-"Your Phone":"Your Phone",
-"Appointment Date":"Appointment Date",
-"Select Doctor":"Select Doctor",
-"Gallery":"Gallery",
-"With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.":"With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.",
-"Message (Optional)":"Message (Optional)",
-"Make an Appointment":"Make an Appointment",
-"Select Department":"Select Department",
-"We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.":"We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.",
-"We use the latest technology":"We use the latest technology",
-"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.":"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.",
-"Simplify Your Healthcare Experience":"Simplify Your Healthcare Experience",
-"Why Choose Medilab?":"Why Choose Medilab?",
-"Make an Appointment":"Make an Appointment",
-"We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.":"We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.",
-"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.":"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.",
-"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.":"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.",
-"Learn More":"Learn More",
+    "clinicAddressisrequired": "Clinic Address is required",
+    "specification": "Specification",
+    "specificationisrequired": "Specification is required",
+    "role": "role",
+    "roleisrequired": "role is required",
+    "welcome": "welcome",
+    "logout": "Logout",
+    "Welcome to Medilab": "Welcome to Medilab",
+    "We looking forward to serve you and your family's healthcare needs": "We looking forward to serve you and your family's healthcare needs",
+    "Get Started": "Get Started",
+    "Perfect Quality": "Perfect Quality",
+    "Your Name": "Your Name",
+    "Your Email": "Your Email",
+    "Your Phone": "Your Phone",
+    "Appointment Date": "Appointment Date",
+    "Select Doctor": "Select Doctor",
+    "Gallery": "Gallery",
+    "With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.": "With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.",
+    "Message (Optional)": "Message (Optional)",
+    "Make an Appointment": "Make an Appointment",
+    "Select Department": "Select Department",
+    "Select your city": "Select your city",
+    "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.": "We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.",
+    "We use the latest technology": "We use the latest technology",
+    "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.": "We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.",
+    "Simplify Your Healthcare Experience": "Simplify Your Healthcare Experience",
+    "Why Choose Medilab?": "Why Choose Medilab?",
+    "Make an Appointment": "Make an Appointment",
+    "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.": "We strive to make your appointment scheduling process as seamless as possible, so you can focus on your health and well-being.",
+    "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.": "Book Appointments, order prescriptions, and access your medical records anytime, anywhere.",
+    "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.": "we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.",
+    "Learn More": "Learn More",
 
-"Get Started":"Get Started"
+    "Get Started": "Get Started"
 }
