configuring admin dashboard

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -130,6 +130,7 @@
     "typeisrequired":" يجب إاختيار نوع للمستخدم",
     "name":"الإسم",
     "mobilePhone":"رقم الهاتف",
-    "type":"نوع المستخدم"
+    "type":"نوع المستخدم",
+    "Total Users":"عدد المستخدمين"
 
 }
