edit get appointments

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -19,6 +19,7 @@
     "Female": "انثي",
     "Other": "اخري",
     "Contact":"",
+    "Prescription":"روشتة",
     "Genderisrequired": "يجب اختيار الجنس",
     "clinicAddress": "عنوان العيادة",
     "clinicAddressisrequired": "يجب ادخال عنوان العيادة",
