--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
     "Search Now":"Search Now",
     "Female": "Female",
     "Other": "Other",
+    "Prescription":"Prescription",
     "Contact":"Contact",
     "Genderisrequired": "Gender is required",
     "clinicAddress": "Clinic Address",
