--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
     "clinicAddressisrequired": "Clinic Address is required",
     "specification": "Specification",
     "specificationisrequired": "Specification is required",
-    "role": "role",
+    "role": "Role",
     "roleisrequired": "role is required",
     "welcome": "welcome",
     "Welcome to Medilab": "Welcome to Medilab",
@@ -122,14 +122,58 @@
 "nameisrequired":"name is required",
 "mobilePhoneisrequired":"mobile Phone is required",
 "typeisrequired":"type is required",
-"name":"name",
-"mobilePhone":"mobile phone",
-"type":"type",
+"name":"Name",
+"mobilePhone":"Mobile Phone",
+"type":"Type",
 "Total Users":"Total Users",
 "Certificate":"Certificate",
 "Last3MonthsReservationsperDepartment":"Last 3 Months Reservations per Department",
 "ReservationsnumberperDepartment":"Reservations number per Department",
-"ReservationsnumberperDoctor":"Reservations number per Doctor"
-
+"ReservationsnumberperDoctor":"Reservations number per Doctor",
+"TotalAdmins":"Total Admins",
+"TotalDoctors":"Total Doctors",
+"TotalPatients":"Total Patients",
+"TotalBookings":"Total Bookings",
+"Doctor":"Doctor",
+"DoctorRequests":"Doctor Requests",
+"ViewPaper":"View Paper",
+"Accept":"Accept",
+"Reject":"Reject",
+"Appointments":"Appointments",
+"Patient":"Patient",
+"Time":"Time",
+"Doctorname":"Doctor name",
+"Reviews":"Reviews",
+"a":"WELCOME TO MEDIBOOK",
+"b":"We looking forward to serve you and your family's healthcare needs",
+"c":"GET STARTED",
+"d":"Why Choose Medilab?",
+"e":"we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.",
+"f":"Learn More",
+"g":"Simplify Your Healthcare Experience",
+"h":"Book Appointments, order prescriptions, and access your medical records anytime, anywhere.",
+"i":"We use the latest technology.",
+"j":"We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.",
+"k":"Perfect Quality.",
+"g1":"With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics"
+,"Contact":"Contact",
+"UsefulLinks":"Useful Links",
+"Aboutus":"About us",
+"Termsofservice":"Terms of service",
+"Privacypolicy":"Privacy policy",
+"WebDesign":"Web Design",
+"WebDevelopment":"Web Development",
+"ProductManagement":"Product Management",
+"GraphicDesign":"Graphic Design",
+"JoinOurNewsletter":"Join Our News letter",
+"Marketing":"Marketing",
+"Dashboard":"Dashboard",
+"AddUser":"Add User",
+"ViewUsers":"View Users",
+"Patienthome":"Patient home",
+"TotalReservations":"Total Reservations",
+"Reservations":"Reservations",
+"AvgVisitsbyGender":"Avg Visits by Gender",
+"Incomes":"Incomes"
 
 }
