--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -136,7 +136,55 @@
     "Certificate":"شهادة مزاولة المهنة",
     "Last3MonthsReservationsperDepartment":"حجوزات 3 شهور سابقة",
 "ReservationsnumberperDepartment":"الحجوزات لكل قسم",
-"ReservationsnumberperDoctor":"الحجوزات لكل دكتور"
+"ReservationsnumberperDoctor":"الحجوزات لكل دكتور",
+"TotalAdmins":"جميع المشرفين",
+"TotalDoctors":"جميع الاطباء",
+"TotalPatients":"جميع المرضي",
+"TotalBookings":"جميع الحجوزات",
+"Doctor":"طبيب",
+"DoctorRequests":"طلبات الانضمام",
+"ViewPaper":"اظهر الشهادة",
+"Accept":"اقبل",
+"Reject":"ارفض",
+"Appointments":"المواعيد",
+"Patient":"المريض",
+"Time":"الوقت",
+"Doctorname":"اسم الطبيب",
+"Reviews":"المراجعات",
+"a":"MEDIBOOK اهلا في",
+"b":"نتطلع إلى تلبية احتياجات الرعاية الصحية لك ولعائلتك",
+"c":"لنبدأ الان",
+"d":" ؟ Medilab لماذا نختار ",
+"e":"نحن ملتزمون بتقديم أعلى مستوى من الرعاية لمرضانا في بيئة رحبة ومرحبة. يلتزم فريقنا من المهنيين الطبيين ذوي الخبرة والمهارة بالعمل عن كثب مع كل مريض لتطوير خطة علاج شخصية تلبي احتياجاتهم الفريدة.",
+"f":"المزيد",
+"g":"تبسيط تجربة الرعاية الصحية الخاصة بك",
+"h":"حجز المواعيد وطلب الوصفات الطبية والوصول إلى سجلاتك الطبية في أي وقت وفي أي مكان",
+"i":"نستخدم أحدث التقنيات",
+"j":"نستخدم أحدث التقنيات والتطورات الطبية لضمان حصولك على أعلى جودة ممكنة من الرعاية",
+"k":"جودة مثالية",
+"Gallery":"المعرض",
+"g1":"من خلال مرافقنا الحديثة ، والتكنولوجيا المتقدمة ، والمهنيين الطبيين الخبراء ، نقدم رعاية عالية الجودة لمرضانا ، وعياداتنا هي مكان مريح وآمن لجميع مرضانا. استكشف معرضنا واكتشف الرعاية ذات المستوى العالمي التي نقدمها في عياداتنا"
+
+,"Contact":"التواصل",
+"UsefulLinks":"روابط مساعدة",
+"Aboutus":"عننا",
+"Termsofservice":"شروط الخدمة",
+"Privacypolicy":"سياسة الخصوصية",
+"WebDesign":"تصميم مواقع",
+"WebDevelopment":"تطوير مواقع",
+"ProductManagement":"ادارة مشروعات",
+"GraphicDesign":"تصميم",
+"JoinOurNewsletter":"انضم للجديد",
+"Marketing":"تسويق",
+"Dashboard":"لوحة القيادة",
+"AddUser":"اضافة مستخدم",
+"ViewUsers":"عرض المستخدمين",
+"Patienthome":"المريض",
+"TotalReservations":"جميع الحجوزات",
+"Reservations":"الحجوزات",
+"AvgVisitsbyGender":"الحجوزات بالنسبة للنوع",
+"Incomes":"الدخل"
+
 
 
 }
