--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -183,7 +183,8 @@
 "TotalReservations":"جميع الحجوزات",
 "Reservations":"الحجوزات",
 "AvgVisitsbyGender":"الحجوزات بالنسبة للنوع",
-"Incomes":"الدخل"
+"Incomes":"الدخل",
+"doctorInstructions":"تعليمات الطبيب"
 
 
 
