--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -174,6 +174,7 @@
 "TotalReservations":"Total Reservations",
 "Reservations":"Reservations",
 "AvgVisitsbyGender":"Avg Visits by Gender",
-"Incomes":"Incomes"
+"Incomes":"Incomes",
+"doctorInstructions":"Doctor Instructions"
 
 }
