--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -184,7 +184,9 @@
 "Reservations":"الحجوزات",
 "AvgVisitsbyGender":"الحجوزات بالنسبة للنوع",
 "Incomes":"الدخل",
-"doctorInstructions":"تعليمات الطبيب"
+"doctorInstructions":"تعليمات الطبيب",
+"NoData":"لا يوجد بيانات"
+
 
 
 
