--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -175,6 +175,7 @@
 "Reservations":"Reservations",
 "AvgVisitsbyGender":"Avg Visits by Gender",
 "Incomes":"Incomes",
-"doctorInstructions":"Doctor Instructions"
+"doctorInstructions":"Doctor Instructions",
+"NoData":"No Data"
 
 }
