--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -185,7 +185,8 @@
 "AvgVisitsbyGender":"الحجوزات بالنسبة للنوع",
 "Incomes":"الدخل",
 "doctorInstructions":"تعليمات الطبيب",
-"NoData":"لا يوجد بيانات"
+"NoData":"لا يوجد بيانات",
+"AllAppointments":"كل المواعيد"
 
 
 
