--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -176,6 +176,7 @@
 "AvgVisitsbyGender":"Avg Visits by Gender",
 "Incomes":"Incomes",
 "doctorInstructions":"Doctor Instructions",
-"NoData":"No Data"
+"NoData":"No Data",
+"AllAppointments":"All Appointments"
 
 }
